# cached-nix-shell

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  LICENSE.MIT  build.rs  cached-nix-shell.1.html  cached-nix-shell.1.md  crates-io.nix  default.nix  maintain.sh  rcfile.sh  readme.md  shell.nix
.github/workflows/: pages.yml  test.yml
nix/: Makefile  sources.json
nix-trace/: .gitignore  Makefile  README.md  test.sh  trace-nix.c
src/: args.rs  bash.rs  drv.rs  main.rs  nix_path.rs  path_clean.rs  run.rs  run.sh  shebang.rs  trace.rs  util.rs
tests/: .shellcheckrc  00-lua.sh  01-luajit.sh  02-lua.lua  03-file-dep.sh  03-small.nix  04-path-impure.sh  05-path-pure.sh  06-env-impure.sh  07-env-pure.sh  08-path.lua  09-lua.nix  09-without_--packages.lua  10-foo-bar.nix  10-with_--attr.sh  11-readDir.nix  13-args.sh  14-nontrivial-interpreter.sh  lib.sh  run.sh  t01-lua.sh  t02-file-dep.sh  t03-path-pure-impure.sh  t04-env-pure-impure.sh  t05-attr.sh  t06-readdir.sh  t07-implicit-default-nix.sh  t08-args.sh  t09-I.sh  t10-non-utf8.sh  t11-wrap.sh  t12-shellhook-output.sh  t13-normalize-pwd.sh  t14-special-paths.sh  t15-old-nix.sh  t16-shopt.sh  t17-interactive.sh  t18-invalidate.sh
tests/12-implicit-default-nix/: default.nix
