[package]
name = "cached-nix-shell"
version = "0.1.2"
authors = ["Albert Safin <xzfcpw@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[dependencies]
blake3 = "0.3.1"
bytelines = "2.2.2"
itertools = "0.9.0"
nix = "0.17.0"
serde_json = "1.0.51"
tempfile = "3.1.0"
ufcs = "0.1.0"
xdg = "2.2.0"
