[package]
name = "cached-nix-shell"
version = "0.1.4"
authors = ["Albert Safin <xzfcpw@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[build-dependencies]
which = "4.2.2"

[dependencies]
blake3 = "0.3.7"
bytelines = "2.2.2"
itertools = "0.10.0"
nix = "0.20.0"
once_cell = "1.7.2"
serde_json = "1.0.64"
tempfile = "3.2.0"
ufcs = "0.1.0"
xdg = "2.2.0"
