[package]
name = "cached-nix-shell"
version = "0.1.5"
authors = ["Albert Safin <xzfcpw@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[build-dependencies]
which = "4.4.0"

[dependencies]
blake3 = "1.3.3"
bytelines = "2.4.0"
env_logger = { version = "0.10.1", default-features = false }
itertools = "0.10.5"
log = "0.4.20"
nix = "0.26.2"
once_cell = "1.17.1"
serde_json = "1.0.96"
tempfile = "3.5.0"
ufcs = "0.1.0"
xdg = "2.5.0"
